--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -32,19 +32,8 @@
         </symbol>
     </svg>
     <header class="encabezadoGeneral uno">
-        <!--TEXTO HEADER-->
-        <div class="encabezadoGeneral__sectionUno">
-            <p>Los pedidos tienen un tiempo de armado entre 24 y 48hs</p>
-        </div>
-        <!--BOTONES HEADER-->
-        <div class="encabezadoGeneral__sectionDos">
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./registrarse.html">Registrarse</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./inciarSesion.html">Iniciar Sesion</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./contacto.html">Contactenos</a></button>
-        </div>
             <!--TITULO HEADER-->
             <div class="encabezadoGeneral__sectionTres">
-                <img  class="imagenLogoTipo" src="../IMAGENES/logoTipo.png">
                 <h1>
                     <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="../index.html">Chilos Clothe & Fragance</a>
                 </h1>
@@ -123,7 +112,11 @@
                             <li class="nav-item mb-2"><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">!Veni a conocernos!</a></li>
+                            <li class="nav-item mb-2 ">
+                                <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
+                                    class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-4 offset-1">
@@ -135,6 +128,9 @@
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                                 <button class="btn  botonSubscribirseFooter" type="button">Subscribite</button>
                             </div>
+                            <a href="./PAGINAS/contacto.html">
+                                <button class="btn  botonFooterContacto" type="button">¿Quieres contactarte?Presiona Aqui!</button>
+                            </a>
                         </form>
                     </div>
                 </div>
