--- a/index.html
+++ b/index.html
@@ -30,22 +30,12 @@
         <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
         </symbol>
     </svg>
+    
     <header class="encabezadoGeneral uno">
-        <!--TEXTO HEADER-->
-        <div class="encabezadoGeneral__sectionUno">
-            <p>Los pedidos tienen un tiempo de armado entre 24 y 48hs</p>
-        </div>
-        <!--BOTONES HEADER-->
-        <div class="encabezadoGeneral__sectionDos">
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/registrarse.html">Registrarse</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/inciarSesion.html">Iniciar Sesion</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/contacto.html">Contactenos</a></button>
-        </div>
         <!--TITULO HEADER-->
         <div class="encabezadoGeneral__sectionTres">
-            <img  class="imagenLogoTipo" src="./IMAGENES/logoTipo.png">
             <h1>
-                <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="./index.html">Chilos Clothe & Fragance</a>
+                <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="../index.html">Chilos Clothe & Fragance</a>
             </h1>
         </div>
         <!--LISTA MENU-->
@@ -76,6 +66,9 @@
                     <li>
                         <a href="./PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
                     </li>
+                    <li>
+                        <a href="./PAGINAS/contacto.html">Contacto</a> 
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -88,14 +81,14 @@
             <div class="container ">
                 <div id="carouselExampleControls" class="  carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="/IMAGENES/banner02.png" class="fotoCarrousel d-block " alt="imagen mainInicio uno">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/IMAGENES/banner01.png" class="fotoCarrousel d-block " alt="imagen mainInicio dos">
+                        </div>
                         <div class="carousel-item active">
-                            <img src="./IMAGENES/imagenFondoProducto.jpg" class="fotoCarrousel d-block " alt="imagen mainInicio uno">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./IMAGENES/imagenFondoProducto2.jpg" class="fotoCarrousel d-block " alt="imagen mainInicio dos">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./IMAGENES/fondoInicio.jpg" class="fotoCarrousel d-block " alt="imagen mainInicio tres">
+                            <img src="/IMAGENES/banner03.png" class="fotoCarrousel d-block " alt="imagen mainInicio tres">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -108,6 +101,30 @@
                     </button>
                 </div>
             </div>
+        </div>
+        <div class="destacados">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <a href="/PAGINAS/aromas.html">
+                    <div class="col">
+                        <div class="card shadow-sm"> 
+                            <img src="/IMAGENES/BannerAromas.png" alt="Aromas">
+                        </div>
+                    </div>
+                </a>
+                <a href="/PAGINAS/conjunto.html">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="/IMAGENES/BannerConjuntos.png" alt="Aromas">
+                        </div>
+                    </div>
+                </a>
+                <a href="/PAGINAS/pijama.html">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="/IMAGENES/BannerPijamas.png" alt="Aromas">
+                        </div>
+                    </div>
+                </a>
         </div>
     </main>
     <footer class="footerGeneral tres  ">
@@ -128,7 +145,11 @@
                             <li class="nav-item mb-2 "><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
                             <li class="nav-item mb-2 "><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
-                            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-muted">!Veni a conocernos!</a></li>
+                            <li class="nav-item mb-2 ">
+                                <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
+                                    class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-4 offset-1">
@@ -140,6 +161,9 @@
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                                 <button class="btn  botonSubscribirseFooter" type="button">Subscribite</button>
                             </div>
+                            <a href="./PAGINAS/contacto.html">
+                                <button class="btn  botonFooterContacto" type="button">¿Quieres contactarte?Presiona Aqui!</button>
+                            </a>
                         </form>
                     </div>
                 </div>
